--- a/webgpu1.html
+++ b/webgpu1.html
@@ -193,8 +193,10 @@ context      = canvas.getContext('webgpu');
    </div><br/>
    <!-- Go big for screen snippets -->
    <div class="sample">
-      WebGPU Translate animate 1:<br/>
-      <canvas id = "animate"  width = "360" height = "360" class="cyan">
+      WebGPU<br/>
+      webgl space doesn't concide<br/>
+      Translate animate 1:<br/>
+      <canvas id = "animate"  width="120" height="120" class="cyan">
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VSUniforms {
                translation: vec4f,
@@ -220,10 +222,34 @@ context      = canvas.getContext('webgpu');
          <script src="./webgpu1/webgpuAnimate.js"></script>
       </canvas>
    </div>
-   <div class="sample">
+   <div class="sample" >
+      WebGPU<br/>
+      webgl space adapted to webgpu<br/>
       Translate animate 2:<br/>
-      <canvas id = "animate second instance" width = "360" height = "360" class="magenta">
-          <script src="./webgpu1/animate2.js"></script>
+      <canvas id = "animate second instance" width="120" height="120" class="magenta">
+          <script src="./webgpu1/webgpuAnimate2.js"></script>
+          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VSUniforms {
+               translation: vec4f,
+            };
+            @group(0) @binding(0) var<uniform> vsUniforms: VSUniforms;
+            struct VertexOut
+            {
+               @builtin(position) position : vec4f,
+            }
+            @vertex
+            fn vertex_main (@location(0) position: vec3f) -> VertexOut
+            {
+               var ret : VertexOut;
+               ret.position = vec4f (position, 1) + vsUniforms.translation;
+               return ret;
+            }
+            @fragment
+            fn fragment_main () -> @location(0) vec4f
+            {
+               return vec4f(0.0, 0.0, 0.0, 0.1);
+            }
+         </script>
           <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              uniform   vec3 translation;
@@ -239,12 +265,12 @@ context      = canvas.getContext('webgpu');
             }
          </script>
       </canvas>
-   </div></br>
+   </div>
    <div class="sample">
       WebGPU Normals:<br/>
       Multiple Buffers<br/>
       <canvas id = "normals" width = "120" height = "120"  class="yellow">
-         <script src="./webgpu1/normals.js"></script>
+         <script src="./webgpu1/webgpuNormals.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -273,8 +299,8 @@ context      = canvas.getContext('webgpu');
    <div class="sample">
       WebGPU: Colors R+G:<br/>
       Strided<br/>
-      <canvas id = "usecolors" width = "120" height = "120"  class="yellow">
-          <script src="./webgpu1/usecolors.js"></script>
+      <canvas id="usecolors" width="120" height="120"  class="yellow">
+          <script src="./webgpu1/webgpuUsecolors.js"></script>
           <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -298,11 +324,32 @@ context      = canvas.getContext('webgpu');
       </canvas>
    </div><br/>
    <div class="sample">
-      <br/>
+      To Be Reviewed<br/>
+      WebGPU Inverted(?)<br/>
       Cone TRIANGLE_FAN<br/>
       (wrong, ab glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/triangle_fan.js"></script>
+         <script src="./webgpu1/webgpuTriangleFan.js"></script>
+         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VertexOut
+            {
+               @builtin  (position) position : vec4f, //builtin cannot be changed
+               @location (0)        normal   : vec3f,
+            }
+            @vertex
+            fn vertex_main(@location(0) position: vec3f, @location(1) normal: vec3f) -> VertexOut
+            {
+               var ret : VertexOut;
+               ret.position = vec4(position, 1.0);
+               ret.normal   = normal;
+               return ret;
+            }
+            @fragment
+            fn fragment_main(fragData: VertexOut) -> @location(0) vec4f
+            {
+               return vec4(2.0 * vec3(0.0, 0.5, 0.0), 1.0) * vec4(fragData.normal, 0.9);
+            }
+         </script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -319,6 +366,35 @@ context      = canvas.getContext('webgpu');
             void main()
             {
               gl_FragColor = vec4(2.0 * vec3(0.0, 0.5, 0.0), 1.0) * vec4(nm, 0.9);
+            }
+         </script>
+      </canvas>
+   </div>
+   <div class="sample">
+      To Be Reviewed<br/>
+      WebGPU Inverted(?)<br/>
+      Cone TRIANGLE_FAN 2<br/>
+      (wrong, ab glow effect)</br>
+      <canvas id = "cone" width = "200" height = "200"  class="yellow">
+         <script src="./webgpu1/webgpuTriangleFan2.js"></script>
+         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VertexOut
+            {
+               @builtin  (position) position : vec4f, //builtin cannot be changed
+               @location (0)        normal   : vec3f,
+            }
+            @vertex
+            fn vertex_main(@location(0) position: vec3f, @location(1) normal: vec3f) -> VertexOut
+            {
+               var ret : VertexOut;
+               ret.position = vec4(position, 1.0);
+               ret.normal   = normal;
+               return ret;
+            }
+            @fragment
+            fn fragment_main(fragData: VertexOut) -> @location(0) vec4f
+            {
+               return vec4(2.0 * vec3(0.0, 0.5, 0.0), 1.0) * vec4(fragData.normal, 0.9);
             }
          </script>
       </canvas>
