--- a/webgpu1.html
+++ b/webgpu1.html
@@ -550,30 +550,32 @@ context      = canvas.getContext('webgpu');
       </canvas>
    </div><br/>
    <div class="sample">
-      </br>
-      Cone TRIANGLES (cross), </br>
-      Geometry <br/>
+      WebGPU: face culling</br>
+      Hearth Cone, </br>
+      Geometry (cross) <br/>
       <canvas id = "cone1 heart geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/cone1_heart_geometry.js"></script>
-         <script type="text/glsl-shader" data-gl-type="vertex-shader">
-             attribute vec4 coordinates;
-             attribute vec3 inputNormal;
-             varying mediump vec3 nm;
-             void main()
-             {
-                gl_Position = coordinates;
-                nm = inputNormal;
-             }
-         </script>
-         <script type="text/glsl-shader" data-gl-type="fragment-shader">
-            precision mediump float;
-            const vec3  lightDirection = -normalize(vec3(-1.0,  -1.0,  -1.0)); // Direction -> right up forward
-            const vec3  greenColor     = vec3( 0.0,   1.0,   0.0); // RGB of green
-            varying mediump vec3 nm;
-            void main()
+         <script src="./webgpu1/webgpuCone1HeartGeometry.js"></script>
+         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
+            struct VertexOut
             {
-              float prod   =  dot (lightDirection,   normalize(nm));
-              gl_FragColor = vec4 (greenColor * prod,  1.0);
+               @builtin  (position) position : vec4f, //builtin cannot be changed
+               @location (0)        normal   : vec3f,
+            }
+            @vertex
+            fn vertex_main(@location(0) position: vec4f, @location(1) normal: vec3f) -> VertexOut
+            {
+               var ret : VertexOut;
+               ret.position = position;
+               ret.normal   = normal;
+               return ret;
+            }
+            const greenColor     =  vec3 (0.0,  1.0,  0.0);              // RGB of green
+            const lightDirection =  normalize (vec3(-1.0,  -1.0, -1.0)); // Direction -> to left down forward
+            @fragment
+            fn fragment_main(fragData: VertexOut) -> @location(0) vec4f
+            {
+               let prod = -dot (lightDirection,   normalize(fragData.normal));
+               return vec4 (greenColor * prod,  1.0);
             }
          </script>
       </canvas>
